--- a/project_landing-page/index.css
+++ b/project_landing-page/index.css
@@ -1,18 +1,35 @@
+h1{
+  margin-top: 10px;
+  margin-bottom: 0;
+}
 .header  {
     font-family: monospace;
     background:#1f2937;
-    padding:8px;
+    padding-inline: 130px;
     display:flex;
-    justify-content:space-around;
-    align-items:flex-start;
+    justify-content: flex-start;
     flex-direction: column;
     flex-wrap: wrap;
+    padding-bottom: 100px;
+
     
+  }
+
+  .header > * + * {
+    margin-top:50px;
+  }
+
+  .header-top{
+    display:flex;
+    
+    margin-bottom: 50px;
   }
 
   .right_elements{
     display:flex;
     align-self: flex-end;
+    justify-content: flex-end;
+    
 
   }
 
@@ -21,7 +38,6 @@
  .logo {
     font-size: 24px;
     font-weight: 900;
-    padding: 4px 32px;
     color:#f9faf8;
     display: flex;
     align-self: flex-start;
@@ -38,20 +54,36 @@
   }
 
   ul{
-    list-style-type:none;
-    margin:0;
-    padding:0;
+    list-style-type: none;
     display:flex;
+    margin:0 auto;
     gap:8px;
-    justify-content: right;
+  }
 
+  .headermain{
+    display:flex;
+    flex-direction: row;
+    column-gap: 100px;
   }
 
   .headerbody{
-    font-size:48px;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
     font-weight:extra-bold;
     color:#f9faf8
+    
 
+  }
+ 
+  .image{
+    display:flex;
+    align-self: center;
+
+    ;
+  
+    
   }
   
 
