--- a/project_landing-page/index.css
+++ b/project_landing-page/index.css
@@ -8,16 +8,13 @@ h1{
     padding-inline: 130px;
     display:flex;
     justify-content: flex-start;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     padding-bottom: 100px;
 
     
   }
 
-  .header > * + * {
-    margin-top:50px;
-  }
 
   .header-top{
     display:flex;
@@ -81,9 +78,14 @@ h1{
     display:flex;
     align-self: center;
 
-    ;
-  
-    
+
+  }
+
+  .button1{
+    background-color: rgb(31, 129, 241);
+    color:#e5e7eb;
+    border-radius: 20%;
+
   }
   
 
