--- a/project_landing-page/index.css
+++ b/project_landing-page/index.css
@@ -3,7 +3,7 @@ h1{
   margin-bottom: 0;
 }
 .header  {
-    font-family: monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background:#1f2937;
     padding-inline: 50px;
     padding-left: 130px;
@@ -61,7 +61,7 @@ h1{
   .headermain{
     display:flex;
     flex-direction: row;
-    column-gap: 100px;
+    column-gap: 200px;
   }
 
   .headerbody{
@@ -73,8 +73,9 @@ h1{
  
   .image{
     display:flex;
-    align-self: center;
-    justify-self: flex-start;
+    align-self: flex-end;
+    margin-left: auto ;
+
 
 
   }
@@ -93,20 +94,57 @@ h1{
 
   .information{
     display: flex;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    row-gap: 40px;
+    margin-bottom: 100px;
 
     
   }
   .info-head{
     display: flex;
     justify-content: center;
-    font-family:monospace;
     color: #1f2937;
     font-weight:bolder;
     font-size: 36px;
 
   }
 
-  
-  
+  .info-images{
+    display: flex;
+    justify-content:center;
+    flex-wrap: wrap;
+    margin-left: 70px;
 
+    }
+    
+  .info_image{
+    border-style:solid;
+    border-radius: 25px;
+    width: 150px;
+    height: 150px;
+    border-width: medium medium medium;
+    border-color: rgb(31, 129, 241);
+  
+  }
+  .caption{
+    display:flex;
+    justify-content: center;
+    color: grey;
+    width: 50%;
+    font-size:medium;
+  }
+  
+  .figure{
+    margin-left:0px;
+    margin-right:0px;
+  }
 
+  .quote{
+    background-color:#e5e7eb ;
+    color:#1f2937;
+    font-size: 36px;
+    font-style: italic;
+  }
