--- a/project_landing-page/index.css
+++ b/project_landing-page/index.css
@@ -1,3 +1,6 @@
+  .body{
+    margin: 0;
+  }
 h1{
   margin-top: 10px;
   margin-bottom: 0;
@@ -12,6 +15,7 @@ h1{
     flex-direction: column;
     flex-wrap: wrap;
     padding-bottom: 100px;
+    margin-bottom: 50px;
 
     
   }
@@ -81,7 +85,7 @@ h1{
   }
 
   .button1{
-    background-color: rgb(31, 129, 241);
+    background-color: #3882f6;
     color:#e5e7eb;
     border-width: 0;
     font-weight: bold;
@@ -116,11 +120,11 @@ h1{
     display: flex;
     justify-content:center;
     flex-wrap: wrap;
-    margin-left: 70px;
 
     }
     
   .info_image{
+    display:flex;
     border-style:solid;
     border-radius: 25px;
     width: 150px;
@@ -133,18 +137,92 @@ h1{
     display:flex;
     justify-content: center;
     color: grey;
-    width: 50%;
     font-size:medium;
-  }
-  
-  .figure{
-    margin-left:0px;
-    margin-right:0px;
+
+
   }
 
+  .info-images figure{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 150px;
+  }
+  
+
+
   .quote{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:#e5e7eb ;
     color:#1f2937;
     font-size: 36px;
     font-style: italic;
+    padding:7%;
   }
+
+  .quote-cite{
+    display: flex;
+    justify-content: flex-end;
+    font-style: normal;
+    font-weight:bold;
+
+  }
+
+  .signup{
+    display: flex;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    background-color:#3882f6 ;
+    margin:100px;
+    padding-inline: 100px;
+    padding-right:160px;
+    border-radius: 10px;
+    color:white;
+  }
+
+  .firstline{
+    display: flex;
+    font-weight: bold;
+    font-size: 150%;
+    margin-top:30px;
+    margin-bottom: 5px;
+
+  }
+  .secondline{
+    display:flex;
+    font-size: medium;
+    margin:0;
+
+  }
+
+  .button2{
+    width:100px;
+    height:30px;
+    font-size: large;
+    margin-block: 50px;
+    font-weight: bold;
+    background-color:#3882f6 ;
+    color:white;
+    border-width: thin thin thin;
+    border-color: white;
+    border-style:solid;
+    border-radius: 5px;
+    padding-inline:10px;
+    margin-left: auto ;
+    
+  }
+
+  .footer{
+    display:flex;
+    justify-content: center;
+    padding: 30px;
+    background-color: #1f2937;
+    margin:0;
+    color:white;
+
+  }
+
+
+
